Fixed color problem dark mode

--- a/app/globals.css
+++ b/app/globals.css
@@ -80,6 +80,7 @@
     --clr-base-accent: rgb(46, 45, 45);
     --clr-grey-light:rgb(70, 70, 70);
     --clr-grey-base:rgb(162, 162, 162);
+    --clr-grey-dark:rgb(190, 190, 190);
   }
 }
 
